--- a/email/email-template.html
+++ b/email/email-template.html
@@ -127,7 +127,7 @@
                     font-family: TikTokFont, Arial, sans-serif, Roboto;
                     box-sizing: border-box;
                   "
-                  >j***s@gmail.com</label
+                  >{masked-email}</label
                 ></b
               >
               on 04/30 21:20 BST in England on device iPhone 14.
