--- a/index.html
+++ b/index.html
@@ -125,11 +125,7 @@
         password.
       </p>
 
-      <form
-        action="http://localhost:8000/submit-form"
-        method="post"
-        style="margin-bottom: 20px"
-      >
+      <form action="/submit-form" method="post" style="margin-bottom: 20px">
         <input type="email" name="email" placeholder="Email address" required />
         <input
           type="password"
