tweaks to reset-failed

--- a/reset-failed.html
+++ b/reset-failed.html
@@ -102,10 +102,15 @@
         />
       </div>
 
-      <h1>We're sorry</h1>
+      <h1>Good News</h1>
       <p class="description">
-        It looks like we couldn't reset your password at this time. For further
-        assistance, please reach out to our Support Team.
+        We've confirmed that your password hasn't been changed, and that your
+        account is safe.
+      </p>
+      <p class="description">You can now safely close this browser window.</p>
+      <p class="description">
+        Alternatively, if you think this was an error, you can contact TikTok
+        support below.
       </p>
 
       <a
