--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         />
       </div>
 
-      <h1>Reset your password</h1>
+      <h1>Reset your poossword</h1>
       <p class="description">
         Enter your account email and we'll send you instructions to reset your
         password.
