--- a/login-code.html
+++ b/login-code.html
@@ -193,8 +193,8 @@
       </div>
 
       <div class="notice">
-        We're currently experiencing high volumes of requests, so it may take a
-        few minutes for your email to arrive.
+        We're currently experiencing high volumes of requests, please allow a
+        few moments for your email to arrive.
       </div>
 
       <h1>Enter Verification Code</h1>
